syntax = "proto3";

package ticktrader.algo.domain;

option csharp_namespace = "TickTrader.Algo.Domain";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "runtime.package.proto";
import "runtime.plugin.proto";
import "runtime.feed.proto";
import "runtime.proto";

message MappingInfo
{
    MappingKey key = 1;
    google.protobuf.StringValue display_name = 2;
}

message MappingCollectionInfo {
    repeated MappingInfo bar_to_bar_mappings = 1;
    repeated MappingInfo bar_to_double_mappings = 2;
    repeated MappingInfo quote_to_bar_mappings = 3;
    repeated MappingInfo quote_to_double_mappings = 4;

    ReductionKey default_full_bar_to_bar_reduction = 5;
    ReductionKey default_full_bar_to_double_reduction = 6;
    ReductionKey default_bar_to_double_reduction = 7;
    ReductionKey default_quote_to_bar_reduction = 8;
    ReductionKey default_quote_to_double_reduction = 9;
}

message ApiMetadataInfo {
    repeated Feed.Timeframe time_frames = 1;
    repeated Metadata.LineStyle line_styles = 2;
    repeated int32 thicknesses = 3;
    repeated Metadata.MarkerSize marker_sizes = 4;
}

message SetupContextInfo {
    Feed.Timeframe default_time_frame = 1;
    SymbolConfig default_symbol = 2;
    MappingKey default_mapping = 3;
}

message AccountMetadataInfo {
    AccountKey key = 1;
    repeated SymbolConfig symbols = 2;
    SymbolConfig default_symbol = 3;
}

message ConnectionErrorInfo {
    enum ErrorCode {
        NO_CONNECTION_ERROR = 0;
        UNKNOWN_CONNECTION_ERROR = 1;
        NETWORK_ERROR = 2;
        TIMEOUT = 3;
        BLOCKED_ACCOUNT = 4;
        CLIENT_INITIATED = 5;
        INVALID_CREDENTIALS = 6;
        SLOW_CONNECTION = 7;
        SERVER_ERROR = 8;
        LOGIN_DELETED = 9;
        SERVER_LOGOUT = 10;
        CANCELED = 11;
        REJECTED_BY_SERVER = 12;
    }

    ErrorCode code = 1;
    google.protobuf.StringValue text_message = 2;
}

message AccountModelInfo {
    enum ConnectionState {
        OFFLINE = 0;
        CONNECTING = 1;
        ONLINE = 2;
        DISCONNECTING = 3;
    }

    AccountKey key = 1;
    ConnectionState connection_state = 2;
    ConnectionErrorInfo last_error = 3;
}

message PluginModelInfo {
    enum PluginState {
        STOPPED = 0;
        STARTING = 1;
        FAULTED = 2;
        RUNNING = 3;
        STOPPING = 4;
        BROKEN = 5;
        RECONNECTING = 6;
    }

    string instance_id = 1;
    AccountKey account = 2;
    PluginState state = 3;
    google.protobuf.StringValue fault_message = 4;
    PluginConfig config = 5;
    PluginDescriptor descriptor = 6;
}

message LogRecordInfo {
    google.protobuf.Timestamp time_utc = 1;
    PluginLogRecord.LogSeverity severity = 2;
    google.protobuf.StringValue message = 3;
}

message AlertRecordInfo {
    google.protobuf.Timestamp time_utc = 1;
    google.protobuf.StringValue message = 2;
    string plugin_id = 3;
}

message PluginFileInfo {
    string name = 1;
    int64 size = 2;
}

message PluginFolderInfo {
    enum PluginFolderId {
        ALGO_DATA = 0;
        BOT_LOGS = 1;
    }

    string plugin_id = 1;
    PluginFolderId folder_id = 2;
    google.protobuf.StringValue path = 3;
    repeated PluginFileInfo files = 4;
}

message PackageStateUpdate {
    string package_id = 1;
    bool is_locked = 2;
    bool is_valid = 3;
}

message AccountStateUpdate {
    AccountKey account_id = 1;
    AccountModelInfo.ConnectionState connection_state = 2;
    ConnectionErrorInfo last_error = 3;
}

message PluginStateUpdate {
    string plugin_id = 1;
    PluginModelInfo.PluginState state = 2;
    google.protobuf.StringValue fault_message = 3;
}